{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 24,
  "lineage": "accd3e0d-ba0d-ca24-06eb-e8676ead590c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:679309468658:instance/i-09db7ef793ee0dc3b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09db7ef793ee0dc3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "priya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a04005ae22d34793",
            "private_dns": "ip-10-20-1-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.22",
            "public_dns": "ec2-3-227-243-244.compute-1.amazonaws.com",
            "public_ip": "3.227.243.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e6bc0170ffeb012f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0470cdf89c6122dd4",
            "tags": {
              "Name": "dev-server1"
            },
            "tags_all": {
              "Name": "dev-server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c6324d50b51cab5"
            ]
          },
          "dependencies": [
            "aws_security_group.devsg",
            "aws_subnet.devpublicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:679309468658:instance/i-0efe48736911e51da",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efe48736911e51da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "priya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-065f3e1a240862c45",
            "private_dns": "ip-10-30-1-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.71",
            "public_dns": "ec2-18-214-26-182.compute-1.amazonaws.com",
            "public_ip": "18.214.26.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-065d9c139ae5861b4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02efdca652c0aaf80",
            "tags": {
              "Name": "prod-server2"
            },
            "tags_all": {
              "Name": "prod-server2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06170291e226b9d10"
            ]
          },
          "dependencies": [
            "aws_security_group.testsg",
            "aws_subnet.testpublicsubnet",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:internet-gateway/igw-001a52d2a82aa2f56",
            "id": "igw-001a52d2a82aa2f56",
            "owner_id": "679309468658",
            "tags": {
              "Name": "dev-igw1"
            },
            "tags_all": {
              "Name": "dev-igw1"
            },
            "vpc_id": "vpc-03719a910ef23cd6a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:internet-gateway/igw-0348dd138f7ece7a4",
            "id": "igw-0348dd138f7ece7a4",
            "owner_id": "679309468658",
            "tags": {
              "Name": "prod-igw2"
            },
            "tags_all": {
              "Name": "prod-igw2"
            },
            "vpc_id": "vpc-04cc142350b7d0137"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "accepter-communication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06e1abdf5a0a378ef662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e1abdf5a0a378ef",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f84cd7921078beb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_route_table.testrt",
            "aws_vpc.dev",
            "aws_vpc.test",
            "aws_vpc_peering_connection.requester"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "requester-communication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01ed99d06e89d81c5805491791",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01ed99d06e89d81c5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f84cd7921078beb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devigw",
            "aws_route_table.devrt",
            "aws_vpc.dev",
            "aws_vpc.test",
            "aws_vpc_peering_connection.requester"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:route-table/rtb-01ed99d06e89d81c5",
            "id": "rtb-01ed99d06e89d81c5",
            "owner_id": "679309468658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001a52d2a82aa2f56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rt1"
            },
            "tags_all": {
              "Name": "dev-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03719a910ef23cd6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devigw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "testrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:route-table/rtb-06e1abdf5a0a378ef",
            "id": "rtb-06e1abdf5a0a378ef",
            "owner_id": "679309468658",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0348dd138f7ece7a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-rt2"
            },
            "tags_all": {
              "Name": "prod-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cc142350b7d0137"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devrtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026dc1e317ab2a082",
            "route_table_id": "rtb-01ed99d06e89d81c5",
            "subnet_id": "subnet-0470cdf89c6122dd4"
          },
          "dependencies": [
            "aws_internet_gateway.devigw",
            "aws_route_table.devrt",
            "aws_subnet.devpublicsubnet",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048fafce808602e01",
            "route_table_id": "rtb-01ed99d06e89d81c5",
            "subnet_id": "subnet-00e48befac3f115aa"
          },
          "dependencies": [
            "aws_internet_gateway.devigw",
            "aws_route_table.devrt",
            "aws_subnet.devpublicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testrtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5b3f375e10f0aa7",
            "route_table_id": "rtb-06e1abdf5a0a378ef",
            "subnet_id": "subnet-02efdca652c0aaf80"
          },
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_route_table.testrt",
            "aws_subnet.testpublicsubnet",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00143b2d899d5b030",
            "route_table_id": "rtb-06e1abdf5a0a378ef",
            "subnet_id": "subnet-07d8e8b643e31a151"
          },
          "dependencies": [
            "aws_internet_gateway.testigw",
            "aws_route_table.testrt",
            "aws_subnet.testpublicsubnet",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:security-group/sg-08c6324d50b51cab5",
            "description": "sg creation",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c6324d50b51cab5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240324141543499900000001",
            "name_prefix": "terraform-",
            "owner_id": "679309468658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg1"
            },
            "tags_all": {
              "Name": "dev-sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03719a910ef23cd6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:security-group/sg-06170291e226b9d10",
            "description": "sg creation",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06170291e226b9d10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240324141543823500000002",
            "name_prefix": "terraform-",
            "owner_id": "679309468658",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg2"
            },
            "tags_all": {
              "Name": "prod-sg2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cc142350b7d0137"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devpublicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-00e48befac3f115aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e48befac3f115aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet11"
            },
            "tags_all": {
              "Name": "dev-publicsubnet11"
            },
            "vpc_id": "vpc-03719a910ef23cd6a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-0470cdf89c6122dd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0470cdf89c6122dd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet12"
            },
            "tags_all": {
              "Name": "dev-publicsubnet12"
            },
            "vpc_id": "vpc-03719a910ef23cd6a"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testpublicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-07d8e8b643e31a151",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d8e8b643e31a151",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet21"
            },
            "tags_all": {
              "Name": "dev-publicsubnet21"
            },
            "vpc_id": "vpc-04cc142350b7d0137"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:subnet/subnet-02efdca652c0aaf80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02efdca652c0aaf80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679309468658",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-publicsubnet22"
            },
            "tags_all": {
              "Name": "dev-publicsubnet22"
            },
            "vpc_id": "vpc-04cc142350b7d0137"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:vpc/vpc-03719a910ef23cd6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-037d5ee57dda0b35e",
            "default_route_table_id": "rtb-0b2280d6c0fd0ce28",
            "default_security_group_id": "sg-00c5ecd2aec3f1180",
            "dhcp_options_id": "dopt-03d16827be5e7d9c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03719a910ef23cd6a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2280d6c0fd0ce28",
            "owner_id": "679309468658",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679309468658:vpc/vpc-04cc142350b7d0137",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-02d6d6207bdabe459",
            "default_route_table_id": "rtb-0d38c879e462deee2",
            "default_security_group_id": "sg-0f5c5b9bbd0c5ccc5",
            "dhcp_options_id": "dopt-03d16827be5e7d9c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04cc142350b7d0137",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d38c879e462deee2",
            "owner_id": "679309468658",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-0f84cd7921078beb1",
            "peer_owner_id": "679309468658",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-04cc142350b7d0137",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "requester"
            },
            "tags_all": {
              "Name": "requester"
            },
            "vpc_id": "vpc-03719a910ef23cd6a"
          },
          "dependencies": [
            "aws_vpc.dev",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0f84cd7921078beb1",
            "peer_owner_id": "679309468658",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-04cc142350b7d0137",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "accepter"
            },
            "tags_all": {
              "Name": "accepter"
            },
            "vpc_id": "vpc-03719a910ef23cd6a",
            "vpc_peering_connection_id": "pcx-0f84cd7921078beb1"
          },
          "dependencies": [
            "aws_vpc.dev",
            "aws_vpc.test",
            "aws_vpc_peering_connection.requester"
          ]
        }
      ]
    }
  ]
}